<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="100">



    <TableRow android:id="@+id/TableRow01">
        <TextView android:id="@+id/TextView01"
            android:text="@string/nombre" />

        <EditText android:id="@+id/EditText01" android:width="220px" />
    </TableRow>

    <TableRow android:id="@+id/TableRow02">
        <TextView android:id="@+id/TextView02" android:text="@string/apellidos" />
        <EditText android:id="@+id/EditText02"
            android:width="200dp"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView"
            android:text="@string/email"
            android:width="100px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/textView2"
            android:text="@string/mensaje"
            android:width="100px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText2"
            android:width="220px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:id="@+id/checkBox" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/titulo"
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_marginTop="20dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto"
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_marginTop="10dp" />
    </TableRow>
</TableLayout>
